<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="logout_btn">注销</string>
    <string name="app_name">骑行吧</string>
    <string name="regist">注册</string>
    <string name="my_artical">  我的游记</string>
    <string name="my_activity">  我的活动</string>
    <string name="my_save">  我的收藏</string>
    <string name="my_join_acti">  已加入活动</string>
    <string name="hint_reinputpwd">确认密码</string>

    <string name="hint_nickname">称号</string>
    <string name="userName">用户名:</string>
    <string name="userPwd">密码:</string>
    <string name="chengePwd">修改密码</string>
    <string name="login">登录</string>
    <string name="cancel">取消</string>
    <string name="chengePwdBtn">修改密码</string>
    <string name="reSign">重新签到</string>
    <string name="noteInputPwd">请输入密码</string>
    <string name="noteInputUser">请输入用户名</string>
    <string name="hint_intput_email">邮箱(密码找回)</string>
    <string name="findPwd">找回密码</string>
    <string name="reset">X</string>
    <string name="exist">退出</string>
    <string name="back">返回</string>
    <string name="logout">注销</string>
    <string name="day">天</string>
    <string name="currentLocation">当前位置</string>
    <string name="locationmsg">当前位置(若不准确请重新定位)</string>
    <string name="settings">设置</string>
    <string name="arti">游记</string>
    <string name="acti">活动</string>
    <string name="me">我</string>
    <string name="team_create">创建队伍</string>
    <string name="team_join">加入队伍</string>
    <string name="acti_join">加入活动</string>
    <string name="add_acti">发布活动</string>
    <string name="add_arti">发表游记</string>
    <string name="current_location_shared">当前位置共享地图</string>
    <string name="join_team">加入位置共享</string>
    <string name="sent">发送</string>
    <string name="take_photo">上传照片</string>
    <string name="staffloca">位置共享</string>
    <string name="hello">Hello World, LoadMoreListView!</string>
    <string name="pull_to_refresh_pull_label">"下拉刷新..."</string>
    <string name="pull_to_refresh_release_label">松开后刷新...</string>
    <string name="pull_to_refresh_refreshing_label">加载中...</string>
    <string name="pull_to_refresh_tap_label">点击刷新...</string>
    <string name="check_update">检查最新版本</string>

</resources>