<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/main_colar" >

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:background="@drawable/text_edit_style"
        android:ems="10"
        android:hint="@string/hint_intput_email"
        android:imeOptions="actionNext"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText1"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="44dp"
        android:background="@drawable/text_edit_style"
        android:ems="10"
        android:hint="@string/noteInputPwd"
        android:imeOptions="actionNext"
        android:singleLine="true" >
    </EditText>

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText2"
        android:layout_below="@+id/editText2"
        android:layout_marginTop="44dp"
        android:background="@drawable/text_edit_style"
        android:ems="10"
        android:hint="@string/hint_reinputpwd"
        android:imeOptions="actionDone"
        android:singleLine="true" />

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText3"
        android:layout_alignRight="@+id/editText3"
        android:layout_below="@+id/editText3"
        android:layout_marginTop="42dp"
        android:background="@drawable/btn_style"
        android:textColor="#fff"
        android:text="@string/regist" />

</RelativeLayout>