<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <ImageView
        android:id="@+id/login_logo"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/app_name" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:padding="20dp" >

        <EditText
            android:id="@+id/text_username"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="14dp"
            android:background="@drawable/text_edit_style"
            android:ems="10"
            android:hint="@string/noteInputUser"
            android:imeOptions="actionNext"
            android:singleLine="true" >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/text_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_username"
            android:layout_centerHorizontal="true"
            android:background="@drawable/text_edit_style"
            android:ems="10"
            android:hint="@string/noteInputPwd"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:singleLine="true" />

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_password"
            android:layout_centerHorizontal="true"
            android:background="@drawable/btn_style"
            android:text="@string/login"
            android:textColor="@color/btn_text_color" />
    </RelativeLayout>

</RelativeLayout>